# MusicVisualizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dependencies/kiss_fft/: kiss_fft.h
shaders/: AfterImage.frag  CircleShader.frag  bgShader.frag
source/: main.cpp
source/Application/: Application.cpp  Application.hpp  AudioContainer.cpp  AudioContainer.hpp
source/Application/States/: AppStateManager.hpp  GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp  OptionsState.cpp  OptionsState.hpp
